--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Popularity</title>
+        <title>ABES Popularity</title>
 
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <svg id="bubble-chart"></svg>
-        <div class="tooltip">
+        <p id = "heading">ABES HUB</p>
+        <svg id="bubble-chart" ></svg>
+        <div class="tooltip" >
             <img alt="" />
             <div>
                 <a></a>
